--- a/story/myStory.html
+++ b/story/myStory.html
@@ -4,7 +4,7 @@
     <title>Marker Clustering</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script
-     defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88w&callback=initMap"
+     defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88w"
       >
     </script>
     <script src="myStory.js"></script>
@@ -18,6 +18,8 @@
   </head>
   <body>
     <div id="conservMap"></div>
-
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88w&callback=InitMap&v=weekly"
+    async>
+  </script>
   </body>
 </html>
