--- a/story/myStory.html
+++ b/story/myStory.html
@@ -4,8 +4,8 @@
     <title>Marker Clustering</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script
-     defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88w"
-      >
+     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88w"
+     async >
     </script>
     <script src="myStory.js"></script>
     <style>
