Update and fixed polyline functionality

--- a/story/myStory.html
+++ b/story/myStory.html
@@ -17,6 +17,10 @@
     </style>
   </head>
   <body>
+    <div id="floating-panel">
+      <input id="removeStoryLine" type="button" value="Remove Story Path" />
+      <input id="addStoryLine" type="button" value="Restore Story Path" />
+    </div>
     <div id="map"></div>
   </body>
 </html>
