html-css test with fix for js

--- a/story/myStory.html
+++ b/story/myStory.html
@@ -12,11 +12,17 @@
         /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
         #map {
-        height: 800px;
+        width: 600px;
+        height: 600px;
+        }
+        body{
+          text-align: center;
+          background-color: #9da2a7;
         }
     </style>
   </head>
   <body>
+    <h1>Coonservation Areas I've visited over the years</h1>
     <div id="floating-panel">
       <input id="removeStoryLine" type="button" value="Remove Story Path" />
       <input id="addStoryLine" type="button" value="Restore Story Path" />
