--- a/story/myStory.html
+++ b/story/myStory.html
@@ -14,10 +14,11 @@
         #map {
         width: 600px;
         height: 600px;
+        text-align: center;
         }
         body{
           text-align: center;
-          background-color: #9da2a7;
+          background-color: #d2d4d6;
         }
     </style>
   </head>
