--- a/story/myStory.html
+++ b/story/myStory.html
@@ -14,7 +14,8 @@
         #map {
         width: 600px;
         height: 600px;
-        text-align: center;
+        margin-left: 50%;
+        margin-right: 50%;
         }
         body{
           text-align: center;
