--- a/story/myStory.html
+++ b/story/myStory.html
@@ -14,7 +14,7 @@
         #map {
         width: 600px;
         height: 600px;
-        margin-left: 50%;
+        margin-left: 40%;
         margin-right: 50%;
         }
         body{
@@ -24,7 +24,7 @@
     </style>
   </head>
   <body>
-    <h1>Coonservation Areas I've visited over the years</h1>
+    <h1>Conservation Areas I've visited over the years</h1>
     <div id="floating-panel">
       <input id="removeStoryLine" type="button" value="Remove Story Path" />
       <input id="addStoryLine" type="button" value="Restore Story Path" />
