--- a/story/myStory.html
+++ b/story/myStory.html
@@ -12,8 +12,8 @@
         /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
         #map {
-        width: 800px;
-        height: 600px;
+        width: 75;
+        height: 30%;
         margin-left: 35%;
         margin-right: 50%;
         }
