--- a/story/myStory.html
+++ b/story/myStory.html
@@ -12,7 +12,7 @@
         /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
         #map {
-        width: 1100px;
+        width: 100%;
         height: 500px;
         margin-left: 20%;
         margin-right: 50%;
