--- a/story/myStory.html
+++ b/story/myStory.html
@@ -13,7 +13,7 @@
        * element that contains the map. */
         #map {
         width: 100%;
-        height: 600px;
+        height: 650px;
         }
         body{
           text-align: center;
@@ -28,5 +28,9 @@
       <input id="addStoryLine" type="button" value="Restore Story Path" />
     </div>
     <div id="map"></div>
+    <p>On this map, the markers are representing the conservation areas around
+      my area and in fact I have visited over the past several years; also visiting
+      them tens of times in that time frame.
+    </p>
   </body>
 </html>
