--- a/story/myStory.html
+++ b/story/myStory.html
@@ -4,21 +4,21 @@
     <title>Marker Clustering</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script
-     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88w&callback=initMap&v=weekly"
-     async >
-    </script>
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88w&callback=initMap&v=weekly"
+      async
+    ></script>
     <script src="myStory.js"></script>
     <style>
-        /* Always set the map height explicitly to define the size of the div
+      /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
-        #map {
+      #map {
         width: 100%;
         height: 700px;
-        }
-        body{
-          text-align: center;
-          background-color: #d2d4d6;
-        }
+      }
+      body {
+        text-align: center;
+        background-color: #d2d4d6;
+      }
     </style>
   </head>
   <body>
@@ -28,9 +28,79 @@
       <input id="addStoryLine" type="button" value="Restore Story Path" />
     </div>
     <div id="map"></div>
-    <p>On this map, the markers are representing the conservation areas around
-      my area and in fact I have visited over the past several years; also visiting
+    <h3>
+      On this map, the markers are representing the conservation areas around my
+      area and in fact I have visited over the past several years; also visiting
       them tens of times in that time frame.
-    </p>
+    </h3>
+    <div id="descOfPlaces">
+      <h4>
+        A: Lynde Shores Conservation Area is my favourite conservation area to
+        go to. The reason so is because of the diversity of birds that you can
+        see throughout the area; along with that, you can feed birds using the
+        bird feed stations that are around the area. In addition, with mix of
+        wetlands and forest there is an abundant of wildlife such as, but not
+        limited to, deer, racoons, ducks, swans, blue herons (uncommon), and
+        many more.
+      </h4>
+      <h4>
+        B: Coming in at number 2: Heber Down Conservation Area. This conservation
+        area has many trails 
+      </h4>
+      <h4>
+        C: Lynde Shores Conservation Area is my favourite conservation area to
+        go to. The reason so is because of the diversity of birds that you can
+        see throughout the area; along with that, you can feed birds using the
+        bird feed stations that are around the area. In addition, with mix of
+        wetlands and forest there is an abundant of wildlife such as, but not
+        limited to, deer, racoons, ducks, swans, blue herons (uncommon), and
+        many more.
+      </h4>
+      <h4>
+        D: Lynde Shores Conservation Area is my favourite conservation area to
+        go to. The reason so is because of the diversity of birds that you can
+        see throughout the area; along with that, you can feed birds using the
+        bird feed stations that are around the area. In addition, with mix of
+        wetlands and forest there is an abundant of wildlife such as, but not
+        limited to, deer, racoons, ducks, swans, blue herons (uncommon), and
+        many more.
+      </h4>
+      <h4>
+        E: Lynde Shores Conservation Area is my favourite conservation area to
+        go to. The reason so is because of the diversity of birds that you can
+        see throughout the area; along with that, you can feed birds using the
+        bird feed stations that are around the area. In addition, with mix of
+        wetlands and forest there is an abundant of wildlife such as, but not
+        limited to, deer, racoons, ducks, swans, blue herons (uncommon), and
+        many more.
+      </h4>
+      <h4>
+        F: Lynde Shores Conservation Area is my favourite conservation area to
+        go to. The reason so is because of the diversity of birds that you can
+        see throughout the area; along with that, you can feed birds using the
+        bird feed stations that are around the area. In addition, with mix of
+        wetlands and forest there is an abundant of wildlife such as, but not
+        limited to, deer, racoons, ducks, swans, blue herons (uncommon), and
+        many more.
+      </h4>
+      <h4>
+        G: Lynde Shores Conservation Area is my favourite conservation area to
+        go to. The reason so is because of the diversity of birds that you can
+        see throughout the area; along with that, you can feed birds using the
+        bird feed stations that are around the area. In addition, with mix of
+        wetlands and forest there is an abundant of wildlife such as, but not
+        limited to, deer, racoons, ducks, swans, blue herons (uncommon), and
+        many more.
+      </h4>
+      <h4>
+        H: Lynde Shores Conservation Area is my favourite conservation area to
+        go to. The reason so is because of the diversity of birds that you can
+        see throughout the area; along with that, you can feed birds using the
+        bird feed stations that are around the area. In addition, with mix of
+        wetlands and forest there is an abundant of wildlife such as, but not
+        limited to, deer, racoons, ducks, swans, blue herons (uncommon), and
+        many more.
+      </h4>
+    </div>
   </body>
 </html>
