--- a/story/myStory.html
+++ b/story/myStory.html
@@ -34,7 +34,8 @@
       them tens of times in that time frame.
     </h3>
     <div id="descOfPlaces">
-      <h4>
+      <h4>Lynde Shores Conservation Area</h4>
+      <h5>
         A: Lynde Shores Conservation Area is my favourite conservation area to
         go to. The reason so is because of the diversity of birds that you can
         see throughout the area; along with that, you can feed birds using the
@@ -42,12 +43,14 @@
         wetlands and forest there is an abundant of wildlife such as, but not
         limited to, deer, racoons, ducks, swans, blue herons (uncommon), and
         many more.
-      </h4>
-      <h4>
+      </h5>
+      <h4>Heber Down Conservation Area</h4>
+      <h5>
         B: Coming in at number 2: Heber Down Conservation Area. This conservation
         area has many trails 
-      </h4>
-      <h4>
+      </h5>
+      <h4>Thicksons Woods</h4>
+      <h5>
         C: Lynde Shores Conservation Area is my favourite conservation area to
         go to. The reason so is because of the diversity of birds that you can
         see throughout the area; along with that, you can feed birds using the
@@ -55,8 +58,9 @@
         wetlands and forest there is an abundant of wildlife such as, but not
         limited to, deer, racoons, ducks, swans, blue herons (uncommon), and
         many more.
-      </h4>
-      <h4>
+      </h5>
+      <h4>Glen Major</h4>
+      <h5>
         D: Lynde Shores Conservation Area is my favourite conservation area to
         go to. The reason so is because of the diversity of birds that you can
         see throughout the area; along with that, you can feed birds using the
@@ -64,8 +68,9 @@
         wetlands and forest there is an abundant of wildlife such as, but not
         limited to, deer, racoons, ducks, swans, blue herons (uncommon), and
         many more.
-      </h4>
-      <h4>
+      </h5>
+      <h4>Enniskillen Conservation Area</h4>
+      <h5>
         E: Lynde Shores Conservation Area is my favourite conservation area to
         go to. The reason so is because of the diversity of birds that you can
         see throughout the area; along with that, you can feed birds using the
@@ -73,8 +78,9 @@
         wetlands and forest there is an abundant of wildlife such as, but not
         limited to, deer, racoons, ducks, swans, blue herons (uncommon), and
         many more.
-      </h4>
-      <h4>
+      </h5>
+      <h4>Greenwood Conservation Area</h4>
+      <h5>
         F: Lynde Shores Conservation Area is my favourite conservation area to
         go to. The reason so is because of the diversity of birds that you can
         see throughout the area; along with that, you can feed birds using the
@@ -82,8 +88,9 @@
         wetlands and forest there is an abundant of wildlife such as, but not
         limited to, deer, racoons, ducks, swans, blue herons (uncommon), and
         many more.
-      </h4>
-      <h4>
+      </h5>
+      <h4>Mark S. Burnham Provincial Park</h4>
+      <h5>
         G: Lynde Shores Conservation Area is my favourite conservation area to
         go to. The reason so is because of the diversity of birds that you can
         see throughout the area; along with that, you can feed birds using the
@@ -91,8 +98,9 @@
         wetlands and forest there is an abundant of wildlife such as, but not
         limited to, deer, racoons, ducks, swans, blue herons (uncommon), and
         many more.
-      </h4>
-      <h4>
+      </h5>
+      <h4>Harold Town Conservation Area</h4>
+      <h5>
         H: Lynde Shores Conservation Area is my favourite conservation area to
         go to. The reason so is because of the diversity of birds that you can
         see throughout the area; along with that, you can feed birds using the
@@ -100,7 +108,7 @@
         wetlands and forest there is an abundant of wildlife such as, but not
         limited to, deer, racoons, ducks, swans, blue herons (uncommon), and
         many more.
-      </h4>
+      </h5>
     </div>
   </body>
 </html>
