--- a/story/myStory.html
+++ b/story/myStory.html
@@ -19,6 +19,9 @@
         text-align: center;
         background-color: #d2d4d6;
       }
+      #descOfPlaces {
+        width: 60%;
+      }
     </style>
   </head>
   <body>
