--- a/story/myStory.html
+++ b/story/myStory.html
@@ -21,7 +21,7 @@
       }
       #descOfPlaces {
         width: 60%;
-        text-align: center;
+        margin-left: 50%;
       }
     </style>
   </head>
