--- a/story/myStory.html
+++ b/story/myStory.html
@@ -21,7 +21,7 @@
       }
       #descOfPlaces {
         width: 60%;
-        margin-left: 20%;
+        margin-left: 17%;
       }
     </style>
   </head>
@@ -51,17 +51,18 @@
       <h4>Heber Down Conservation Area</h4>
       <h5>
         B: Coming in at number 2: Heber Down Conservation Area. This conservation
-        area has many trails 
+        area has many trails with unique terrain to choose from and hike on. These
+        trails have a certain level of difficulty to them from low-slope and cleared
+        pathways to steep-slopes and undefined pathways. This is one of the main reasons
+        I love going to this area as hiking difficulties are varied for trail to trail
+        which brings a good challenge. Aside from the previous, the area has no shortage
+        of wildlife and because of its proximity, more territorial animals are present
+        which provides great spotting and awe.
       </h5>
       <h4>Thicksons Woods</h4>
       <h5>
-        C: Lynde Shores Conservation Area is my favourite conservation area to
-        go to. The reason so is because of the diversity of birds that you can
-        see throughout the area; along with that, you can feed birds using the
-        bird feed stations that are around the area. In addition, with mix of
-        wetlands and forest there is an abundant of wildlife such as, but not
-        limited to, deer, racoons, ducks, swans, blue herons (uncommon), and
-        many more.
+        C: This conservation area is nothing short of unique as trails and areas within
+        are access on a quite steep slope. 
       </h5>
       <h4>Glen Major</h4>
       <h5>
