--- a/story/myStory.html
+++ b/story/myStory.html
@@ -62,58 +62,45 @@
       <h4>Thicksons Woods</h4>
       <h5>
         C: This conservation area is nothing short of unique as trails and areas within
-        are access on a quite steep slope. 
+        are accessed on quite a steep slope. This area is the best in my opinion to feed
+        wild birds and other animals such as chipmunks and ducks. Another plus to this area
+        is its open fields; not as much forested area as the other conservation areas, but
+        does have wonderful meadows due to this feature which increases spotting opportunities.
       </h5>
       <h4>Glen Major</h4>
       <h5>
-        D: Lynde Shores Conservation Area is my favourite conservation area to
-        go to. The reason so is because of the diversity of birds that you can
-        see throughout the area; along with that, you can feed birds using the
-        bird feed stations that are around the area. In addition, with mix of
-        wetlands and forest there is an abundant of wildlife such as, but not
-        limited to, deer, racoons, ducks, swans, blue herons (uncommon), and
-        many more.
+        D: Glen Major is the top on my list for trails in a variety of terrains and landscapes as
+        it transitions from meadows, fields, creeks, and forest, all in one area. Wildlife in
+        this area is one of the most diverse out of the bunch I have visited as it includes foxes,
+        coyotes, and deer on a more common basis.
       </h5>
       <h4>Enniskillen Conservation Area</h4>
       <h5>
-        E: Lynde Shores Conservation Area is my favourite conservation area to
-        go to. The reason so is because of the diversity of birds that you can
-        see throughout the area; along with that, you can feed birds using the
-        bird feed stations that are around the area. In addition, with mix of
-        wetlands and forest there is an abundant of wildlife such as, but not
-        limited to, deer, racoons, ducks, swans, blue herons (uncommon), and
-        many more.
+        E: Smaller in area than the other conservation areas in this list, it still packs a good
+        punch when it comes to nature and trails. My favourite part of this area is the small ponds
+        and creeks as they are filled with aquatic-life.
       </h5>
       <h4>Greenwood Conservation Area</h4>
       <h5>
-        F: Lynde Shores Conservation Area is my favourite conservation area to
-        go to. The reason so is because of the diversity of birds that you can
-        see throughout the area; along with that, you can feed birds using the
-        bird feed stations that are around the area. In addition, with mix of
-        wetlands and forest there is an abundant of wildlife such as, but not
-        limited to, deer, racoons, ducks, swans, blue herons (uncommon), and
-        many more.
+        F: This one is my favourite for biking on the paved trails as it moves through forested and
+        fielded areas, a nice scene for biking. In addition, the lookout points across the area brings
+        amazing views of the surrounding area and creek system that runs through the area.
       </h5>
       <h4>Mark S. Burnham Provincial Park</h4>
       <h5>
-        G: Lynde Shores Conservation Area is my favourite conservation area to
-        go to. The reason so is because of the diversity of birds that you can
-        see throughout the area; along with that, you can feed birds using the
-        bird feed stations that are around the area. In addition, with mix of
-        wetlands and forest there is an abundant of wildlife such as, but not
-        limited to, deer, racoons, ducks, swans, blue herons (uncommon), and
-        many more.
+        G: Really nice combination of terrain, is conservation area makes you feel small as the trees
+        surrounding you while on the trails are massive. Even though this area I find doesn't have as
+        much active wildlife as the other areas listed, it still has lots to offer.
       </h5>
       <h4>Harold Town Conservation Area</h4>
       <h5>
-        H: Lynde Shores Conservation Area is my favourite conservation area to
-        go to. The reason so is because of the diversity of birds that you can
-        see throughout the area; along with that, you can feed birds using the
-        bird feed stations that are around the area. In addition, with mix of
-        wetlands and forest there is an abundant of wildlife such as, but not
-        limited to, deer, racoons, ducks, swans, blue herons (uncommon), and
-        many more.
+        H: Last but not least, this conservation area, even though doesn't have much trails, is densely
+        forested with the most wildlife out of this list. Favourite part of this area is the terrain as
+        it gives a cool perspective of the surrounding forest.
       </h5>
     </div>
   </body>
+  <footer>
+    <p>Copyright &copy; Google and Ali Mokheamer</p>
+  </footer>
 </html>
